--- a/index.html
+++ b/index.html
@@ -1978,13 +1978,6 @@
 </tr>
 
 <tr>
-<td>Aesop's Fables</td>
-<td>1991</td>
-<td>Fantagraphics</td>
-<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Aeon Flux</td>
 <td>1991</td>
 <td>MTV</td>
@@ -1996,6 +1989,20 @@
 <td>1994</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aesop's Fables</td>
+<td>-620</td>
+<td>Antiquity</td>
+<td><a href="AesopsFables/AesopsFables.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aesop's Fables</td>
+<td>1991</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3965,6 +3972,20 @@
 <td>2016</td>
 <td>Aftershock</td>
 <td><a href="AmericanMonster/AmericanMonster.html">Details</a></td>
+</tr>
+
+<tr>
+<td>American Mythology</td>
+<td>2016</td>
+<td>Publisher</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>American Mythology Dark: Werewolves vs Dinosaurs</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7073,6 +7094,13 @@
 <td>2012</td>
 <td>Image</td>
 <td><a href="Bedlam/Bedlam.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bedtime Stories For Impressionable Children</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10741,6 +10769,20 @@
 </tr>
 
 <tr>
+<td>Carson Of Venus: Realm Of The Dead</td>
+<td>2020</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Carson Of Venus: The Eye Of Amtor</td>
+<td>2020</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Carter Family Don't Forget This Song</td>
 <td>2012</td>
 <td>Abrams</td>
@@ -10847,9 +10889,23 @@
 
 <tr>
 <td>Casimir Lee</td>
-<td>1990?</td>
+<td>1990</td>
 <td>Creator</td>
 <td><a href="CasimirLee/CasimirLee.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper &amp; Hot Stuff</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper &amp; Wendy</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10857,6 +10913,69 @@
 <td>1939</td>
 <td>Paramount</td>
 <td><a href="Casper/Casper.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper The Friendly Ghost</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper The Friendly Ghost Presents Hot Stuff Sizzlers</td>
+<td>2020</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper The Friendly Ghost Presents Wendy &amp; The Witch Widow</td>
+<td>2020</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper The Friendly Ghost: Halloween Comicfest</td>
+<td>2020</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper's Capers</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper's Ghostland</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper's Haunted Halloween</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper's Spooksville</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper's Spooksville FCBD Edition</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11570,6 +11689,13 @@
 <td>1904</td>
 <td>Publisher</td>
 <td><a href="ChiltonBooks/ChiltonBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chim Chum And The Portly Samurai</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13706,6 +13832,13 @@
 </tr>
 
 <tr>
+<td>Crypt of Screams</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crypt Of Shadows</td>
 <td>1973</td>
 <td>Marvel</td>
@@ -14628,6 +14761,13 @@
 <td>2011</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Tales From The Vokesverse</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17326,6 +17466,13 @@
 </tr>
 
 <tr>
+<td>Eagle Resurgent</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Earl Norem</td>
 <td>1923</td>
 <td>Creator</td>
@@ -17522,59 +17669,143 @@
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' Tarzan</td>
-<td>1948</td>
-<td>Dell</td>
-<td><a href="Dell/Dell.html">Details</a></td>
+<td>Edgar Rice Burroughs Carson Of Venus / Warlord Of Mars</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' Jungle Tales Of Tarzan</td>
+<td>Edgar Rice Burroughs Carson Of Venus: Fear On Four Worlds</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Carson Of Venus: Flames Beyond</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Carson Of Venus: Pirates Of Venus</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Genesis</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs John Carter Of Mars</td>
+<td>1964</td>
+<td>Gold Key</td>
+<td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Jungle Tales Of Tarzan</td>
 <td>2015</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' Korak Son Of Tarzan</td>
+<td>Edgar Rice Burroughs Korak Son Of Tarzan</td>
 <td>1964</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' John Carter Of Mars</td>
-<td>1964</td>
-<td>Gold Key</td>
-<td><a href="GoldKey/GoldKey.html">Details</a></td>
+<td>Edgar Rice Burroughs Land That Time Forgot</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' Tarzan Of The Apes</td>
+<td>Edgar Rice Burroughs Land That Time Forgot / Pelliucidar</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Land That Time Forgot: See-Ta The Savage</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Pellucidar: Fear On Four Worlds</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Princess Of Venus</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Tarzan</td>
+<td>1948</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs Tarzan Of The Apes</td>
 <td>1962</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' Tarzan: A Tale Of Mugambi</td>
+<td>Edgar Rice Burroughs Tarzan: A Tale Of Mugambi</td>
 <td>1995</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' Tarzan: The Lost Adventure</td>
+<td>Edgar Rice Burroughs Tarzan: The Lost Adventure</td>
 <td>1995</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Edgar Rice Burroughs' Tarzan: The Return Of Tarzan</td>
+<td>Edgar Rice Burroughs Tarzan: The Return Of Tarzan</td>
 <td>1997</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs The Moon Maid: Catacombs Of The Moon</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs The Moon Maid: Fear On Four Worlds</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19402,6 +19633,13 @@
 <td>1987</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Filbert Factor</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25298,6 +25536,13 @@
 </tr>
 
 <tr>
+<td>Inspector: The Pink Files</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Instant Piano</td>
 <td>1994</td>
 <td>Dark Horse</td>
@@ -28277,6 +28522,13 @@
 <td>1974</td>
 <td>NBC</td>
 <td><a href="LandOfTheLostTV/LandOfTheLostTV.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Land That Time Forgot: the Official Motion Picture Adaptation</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31822,6 +32074,13 @@
 </tr>
 
 <tr>
+<td>Meteor Swarm</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Metro Goldwyn Mayer</td>
 <td>1924</td>
 <td>Publisher</td>
@@ -32617,6 +32876,13 @@
 <td>1971</td>
 <td>Marvel</td>
 <td><a href="MonsterMadness/MonsterMadness.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Monster Men: Soul Of The Beast</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36273,6 +36539,62 @@
 </tr>
 
 <tr>
+<td>Pink Panther</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pink Panther Anniversary Special</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pink Panther Presents The Ant &amp; The Aardvark</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pink Panther Surfside Special</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pink Panther vs The Inspector</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pink Panther: Cartoon Hour Special</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pink Panther: Snow Day</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pink Panther: Trick Or Pink</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pippi Longstocking</td>
 <td>2012</td>
 <td>Drawn &amp; Quarterly</td>
@@ -39055,10 +39377,38 @@
 </tr>
 
 <tr>
+<td>Rocky And Bullwinkle Adventures: Halloween Comicfest</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rocky &amp; Bullwinkle Classics</td>
 <td>2014</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rocky And Bullwinkle Present: the Best of Boris &amp; Matasha</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rocky And Bullwinkle Present: the Best of Dudley Do-Right</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rocky And Bullwinkle Show</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42923,6 +43273,27 @@
 </tr>
 
 <tr>
+<td>Stargate Atlantis Gateways</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stargate Atlantis Hearts And Minds</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stargate Universe</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stargate: Daniel Jackson</td>
 <td>2010</td>
 <td>Dynamite</td>
@@ -42976,6 +43347,13 @@
 <td>1995</td>
 <td>Marvel</td>
 <td><a href="Starmasters/Starmasters.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Starring Sonya Devereaux</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45002,6 +45380,27 @@
 </tr>
 
 <tr>
+<td>Three Stooges Dell 1959 Edition</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Three Stooges: Curse Of Frankenstooge</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Three Stooges: Halloween Hullabaloo</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thrillogy</td>
 <td>1984</td>
 <td>PC</td>
@@ -46224,6 +46623,41 @@
 <td>1975</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underdog</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underdog 1975</td>
+<td>2018</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underdog And Pals</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underdog: FCBD</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underdog: Halloween Comic Fest</td>
+<td>2017</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49797,6 +50231,13 @@
 </tr>
 
 <tr>
+<td>Zombie-Proof: Zombie Zoo</td>
+<td>2016</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Zombies vs. Cheerleaders</td>
 <td>2013</td>
 <td>3 Finger Prints</td>
@@ -49878,6 +50319,13 @@
 <td>2011</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zorro: Sacrilege</td>
+<td>2019</td>
+<td>American Mythology</td>
+<td><a href="AmericanMythology/AmericanMythology.html">Details</a></td>
 </tr>
 
 <tr>
