--- a/index.html
+++ b/index.html
@@ -42117,6 +42117,13 @@
 </tr>
 
 <tr>
+<td>Small Press Expo (SPX)</td>
+<td>1994</td>
+<td>Publisher</td>
+<td><a href="SmallPressExpo/SmallPressExpo.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Smash Comics</td>
 <td>1939</td>
 <td>Quality</td>
