--- a/index.html
+++ b/index.html
@@ -34860,6 +34860,13 @@
 </tr>
 
 <tr>
+<td>Non</td>
+<td>1997</td>
+<td>Red Ink</td>
+<td><a href="Non/Non.html">Details</a></td>
+</tr>
+
+<tr>
 <td>NonNonBa</td>
 <td>2012</td>
 <td>Drawn &amp; Quarterly</td>
@@ -50145,6 +50152,14 @@
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Zhuangzi Speaks : The Music of Nature</td>
+<td>1992</td>
+<td>Princeton University Press</td>
+<td><a href="ZhuangziSpeaks/ZhuangziSpeaks.html">Details</a></td>
+</tr>
+
 
 <tr>
 <td>Ziggy Pig-Silly Seal</td>
