--- a/index.html
+++ b/index.html
@@ -5620,6 +5620,13 @@
 </tr>
 
 <tr>
+<td>Atomic Attack</td>
+<td>1953</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atomic Bunny</td>
 <td>1958</td>
 <td>Charlton</td>
@@ -5715,6 +5722,13 @@
 <td>2006</td>
 <td>Alias</td>
 <td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Attack</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9845,6 +9859,13 @@
 </tr>
 
 <tr>
+<td>Buffalo Bill</td>
+<td>1950</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buffalo Wings</td>
 <td>1993</td>
 <td>Antarctic Press</td>
@@ -11682,6 +11703,13 @@
 <td>2010</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chilling Tales</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14488,6 +14516,13 @@
 <td>1940</td>
 <td>Marvel</td>
 <td><a href="Daring/Daring.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Daring Confessions</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19069,6 +19104,13 @@
 </tr>
 
 <tr>
+<td>Famous Western Badmen</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fan'toons</a>
 <td>1986</td>
 <td>MU Press</td>
@@ -19094,6 +19136,13 @@
 <td>1976</td>
 <td>Publisher</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fantastic</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22967,6 +23016,13 @@
 </tr>
 
 <tr>
+<td>Gunsmoke</td>
+<td>1949</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gunsmoke Trail</td>
 <td>1957</td>
 <td>Farrell</td>
@@ -25410,6 +25466,13 @@
 </tr>
 
 <tr>
+<td>Indian Fighter</td>
+<td>1950</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Indians</td>
 <td>1950</td>
 <td>Fiction House</td>
@@ -25988,6 +26051,13 @@
 <td>2015</td>
 <td>Vertigo</td>
 <td><a href="Jacked/Jacked.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jackpot</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27500,6 +27570,13 @@
 <td>1951</td>
 <td>Publisher</td>
 <td><a href="StanleyMorse/StanleyMorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Keyhole</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38537,6 +38614,13 @@
 </tr>
 
 <tr>
+<td>Redskin</td>
+<td>1950</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Reed Crandall</td>
 <td>1917</td>
 <td>Creator</td>
@@ -43105,6 +43189,20 @@
 </tr>
 
 <tr>
+<td>Stamp Comics</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stamps Comics</td>
+<td>1951</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stan Lee</td>
 <td>1922</td>
 <td>Creator</td>
@@ -44243,6 +44341,13 @@
 <td>1954</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Super Western Comics</td>
+<td>1950</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45415,6 +45520,13 @@
 </tr>
 
 <tr>
+<td>Thrilling Adventures In Stamps Comics</td>
+<td>1953</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thrillogy</td>
 <td>1984</td>
 <td>PC</td>
@@ -46259,6 +46371,13 @@
 <td>2003</td>
 <td>Marvel</td>
 <td><a href="TruthRedWhiteBlack/TruthRedWhiteBlack.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Truthful Love</td>
+<td>1950</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49979,6 +50098,20 @@
 </tr>
 
 <tr>
+<td>Youthful</td>
+<td>1949</td>
+<td>Publisher</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Youthful Love</td>
+<td>1950</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Yow</td>
 <td>1978</td>
 <td>Last Gasp</td>
@@ -50154,7 +50287,7 @@
 </tr>
 
 <tr>
-<td>Zhuangzi Speaks : The Music of Nature</td>
+<td>Zhuangzi Speaks: The Music of Nature</td>
 <td>1992</td>
 <td>Princeton University Press</td>
 <td><a href="ZhuangziSpeaks/ZhuangziSpeaks.html">Details</a></td>
@@ -50355,6 +50488,13 @@
 <td>1984</td>
 <td>Eclipse</td>
 <td><a href="ScottMcCloud/ScottMcCloud.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zowie!</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Youthful/Youthful.html">Details</a></td>
 </tr>
 
 </tbody>
