--- a/index.html
+++ b/index.html
@@ -2412,6 +2412,13 @@
 </tr>
 
 <tr>
+<td>Alan Dragon</td>
+<td>2016</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alan Moore</td>
 <td>1953</td>
 <td>Creator</td>
@@ -4122,6 +4129,13 @@
 </tr>
 
 <tr>
+<td>Amigo Comics</td>
+<td>2007</td>
+<td>Publisher</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Amory Wars</td>
 <td>2007</td>
 <td>Image</td>
@@ -4724,6 +4738,13 @@
 </tr>
 
 <tr>
+<td>Apocalypse Girl</td>
+<td>2017</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Apocalypse Nerd</td>
 <td>2005</td>
 <td>Dark Horse</td>
@@ -4791,6 +4812,13 @@
 <td>2005</td>
 <td>Marvel</td>
 <td><a href="AranaTheHeartOfTheSpider/AranaTheHeartOfTheSpider.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arcane Secrets</td>
+<td>2013</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6492,6 +6520,13 @@
 <td>1994</td>
 <td>Dark Horse</td>
 <td><a href="BarbWire/BarbWire.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Barbara The Barbarian</td>
+<td>2020</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8446,6 +8481,13 @@
 </tr>
 
 <tr>
+<td>Blackening</td>
+<td>2019</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blackhawk</td>
 <td>1944</td>
 <td>Quality</td>
@@ -10153,6 +10195,13 @@
 </tr>
 
 <tr>
+<td>Cabinet Of Dr. Calligari</td>
+<td>2017</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cable</td>
 <td>1993 </td>
 <td>Marvel </td>
@@ -10248,6 +10297,13 @@
 <td>2002</td>
 <td>Marvel</td>
 <td><a href="CallOfDuty911/CallOfDuty911.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Call Of The Suicide Forest</td>
+<td>2018</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21168,6 +21224,13 @@
 </tr>
 
 <tr>
+<td>Gargantuan</td>
+<td>2019</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gargoyle</td>
 <td>1985</td>
 <td>Marvel</td>
@@ -21711,6 +21774,13 @@
 <td>2019</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ghost Wolf</td>
+<td>2014</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28700,6 +28770,13 @@
 </tr>
 
 <tr>
+<td>Last Hunt</td>
+<td>2017</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Last Man Standing: Killbook Of a Bounty Hunter</td>
 <td>2010</td>
 <td>Dark Horse</td>
@@ -30195,6 +30272,13 @@
 <td>2004</td>
 <td>Alternative Comics</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lunita</td>
+<td>2013</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32130,6 +32214,13 @@
 </tr>
 
 <tr>
+<td>Metalic Silence</td>
+<td>2015</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Metaphysique</td>
 <td>1992</td>
 <td>Eclipse</td>
@@ -34006,6 +34097,13 @@
 </tr>
 
 <tr>
+<td>Nancy In Hell: A Dragon In Hell</td>
+<td>2017</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nancy: The John Stanley Library</td>
 <td>2009</td>
 <td>Drawn &amp; Quarterly</td>
@@ -34038,6 +34136,13 @@
 <td>1999</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nasty Pills</td>
+<td>2019</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36832,6 +36937,13 @@
 </tr>
 
 <tr>
+<td>Planet Of Deamons</td>
+<td>2016</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Planet Of The Apes</td>
 <td>1963</td>
 <td>Fox</td>
@@ -39181,6 +39293,13 @@
 </tr>
 
 <tr>
+<td>Rise OF The Tyrant</td>
+<td>2019</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rising Stars</td>
 <td>1999</td>
 <td>Image</td>
@@ -39531,6 +39650,13 @@
 </tr>
 
 <tr>
+<td>Rogues!</td>
+<td>2013</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rolf Armstrong</td>
 <td>1889</td>
 <td>Creator</td>
@@ -39584,6 +39710,13 @@
 <td>2017</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Roman Ritual</td>
+<td>2014</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41667,6 +41800,20 @@
 <td>1949</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sidney Hammer</td>
+<td>2015</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sidney Hammer vs Wicker Wolf</td>
+<td>2019</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43777,6 +43924,13 @@
 </tr>
 
 <tr>
+<td>Straitjacket</td>
+<td>2016</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Strange Adventures</td>
 <td>1950</td>
 <td>DC</td>
@@ -44012,6 +44166,13 @@
 <td>1989</td>
 <td>Blackthorne</td>
 <td><a href="Blackthorne/Blackthorne.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Tiger</td>
+<td>2017</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44733,6 +44894,13 @@
 <td>1986</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales From The Suicide Forest</td>
+<td>2016</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47046,6 +47214,13 @@
 </tr>
 
 <tr>
+<td>Unleashed</td>
+<td>2016</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Unlikely Trio, The Last Barn On The Left</td>
 <td>2008</td>
 <td>Alterna</td>
@@ -48688,6 +48863,13 @@
 <td>1948</td>
 <td>Atlas</td>
 <td><a href="AllWinners/AllWinners.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Westwood Witches</td>
+<td>2013</td>
+<td>Amigo</td>
+<td><a href="AmigoComics/AmigoComics.html">Details</a></td>
 </tr>
 
 <tr>
