--- a/Boom!/Boom!.html
+++ b/Boom!/Boom!.html
@@ -485,10 +485,10 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom13.jpg">Aliens vs Parker</a> (2013)
 <li><a href="Boom14.jpg">Amazing World Of Gumball</a> (2014)
 <li><a href="Boom15.jpg">Americatown</a> (2015)
-<li><a href="Boom16.jpg">Armory Wars III: Good Apollo</a> (2017)
 <li><a href="Boom17.jpg">Anchor</a> (2009)
 <li><a href="Boom18.jpg">Angel</a> (2019)
 <li><a href="Boom19.jpg">Arcadia</a> (2015)
+<li><a href="Boom16.jpg">Armory Wars III: Good Apollo</a> (2017)
 <li><a href="Boom20.jpg">Avant-Guards</a> (2019)
 <li><a href="Boom21.jpg">Backstagers</a> (2017)
 <li><a href="Boom22.jpg">Baker Street Peculiars</a> (2016)
@@ -848,7 +848,7 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom373.jpg">Teen Dog  </a> (2014)
 <li><a href="Boom374.jpg">Thrilling Adventure Hour  </a> (2018)
 <li><a href="Boom375.jpg">Toil and Trouble  </a> (2015)
-<li><a href="Boom376.jpg">Too Much Coffee Man #1 Facsimile Edition  </a> (2011)
+<li><a href="Boom376.jpg">Too Much Coffee Man </a> (2011)
 <li><a href="Boom377.jpg">Toy Story     </a> (2009)
 <li><a href="Boom378.jpg">Toy Story: Mysterious Stranger    </a> (2009)
 <li><a href="Boom379.jpg">Toy Story: Some Assembly Required     </a> (2010)
