--- a/FathomPress/FathomPress.html
+++ b/FathomPress/FathomPress.html
@@ -38,21 +38,25 @@
 <div class="mySlides" style="text-align: center;"><img src="Fathom18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fathom19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fathom20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fathom21.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
+1990 - 1998 Tim Tayler self publishing company.
+</p><p>
 Titles
 </p><p>
 <li><a href="Fathom1.jpg">Blood Reign</a> (1991)
 <li><a href="Fathom10.jpg">Cadaver</a>	(1994)
-<li><a href="Fathom11.jpg">The Dead Crew</a> (1992)
+<li><a href="Fathom11.jpg">Dead Crew</a> (1992)
 <li><a href="Fathom12.jpg">Fiends</a> (1992)
 <li><a href="Fathom13.jpg">Hades</a> (1994)
 <li><a href="Fathom14.jpg">Manga Monthly</a>(1990)
 <li><a href="Fathom17.jpg">Necrotica</a> (1994)
 <li><a href="Fathom18.jpg">Piggs and Stubb</a>	(1994)
+<li><a href="Fathom21.jpg">Ratsbane: Dark Empire</a> (1993)
 <li><a href="Fathom19.jpg">Ravage</a> (1992)
 <li><a href="Fathom20.jpg">Stain</a> (1998)
 </p>
