--- a/index.html
+++ b/index.html
@@ -3590,6 +3590,13 @@
 </tr>
 
 <tr>
+<td>Alter Ego</td>
+<td>1997</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alter Nation</td>
 <td>2004</td>
 <td>Image</td>
@@ -7565,6 +7572,13 @@
 </tr>
 
 <tr>
+<td>Best Of Star-Studded Comics</td>
+<td>2005</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Best Of The West</td>
 <td>1998</td>
 <td>AC Comics</td>
@@ -9003,6 +9017,13 @@
 <td>2011</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blood Reign</td>
+<td>1991</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10514,6 +10535,13 @@
 <td>2012</td>
 <td>Marvel</td>
 <td><a href="CableAndXForce/CableAndXForce.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cadaver</td>
+<td>1994</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13160,6 +13188,13 @@
 </tr>
 
 <tr>
+<td>Comic Fandom Reader</td>
+<td>2002</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comic Home Journal</td>
 <td>1895</td>
 <td>Amalgamated</td>
@@ -15790,6 +15825,13 @@
 <td>2001</td>
 <td>Vertigo</td>
 <td><a href="DeadBoyDetectives/DeadBoyDetectives.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dead Crew</td>
+<td>1992</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19741,6 +19783,20 @@
 </tr>
 
 <tr>
+<td>Eye: Collection</td>
+<td>2002</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eye: Special Edition</td>
+<td>1999</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eye Of Mongombo</td>
 <td>1989</td>
 <td>Fantagraphics</td>
@@ -20074,6 +20130,13 @@
 <td>2012</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fandom's Finest Comics</td>
+<td>1997</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20627,6 +20690,13 @@
 <td>2014</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fiends</td>
+<td>1992</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24408,6 +24478,13 @@
 </tr>
 
 <tr>
+<td>Hades</td>
+<td>1994</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hagar The Horrible</td>
 <td>1973</td>
 <td>King Features</td>
@@ -24524,6 +24601,13 @@
 <td>1999</td>
 <td>Dark Horse</td>
 <td><a href="HammerTheOutsider/HammerTheOutsider.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hamster Press</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25477,6 +25561,13 @@
 <td>1997</td>
 <td>Marvel</td>
 <td><a href="HeroesReborn/HeroesReborn.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heroes vs Hitler</td>
+<td>2000</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30044,6 +30135,20 @@
 </tr>
 
 <tr>
+<td>Labors Of Love</td>
+<td>1994</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Labors Of Love: Expanded Edition</td>
+<td>2000</td>
+<td>Hamster</td>
+<td><a href="HamsterPress/HamsterPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Labyrinth</td>
 <td>1986</td>
 <td>Marvel</td>
@@ -32387,6 +32492,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Manga Monthly</td>
+<td>1990</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36064,6 +36176,13 @@
 </tr>
 
 <tr>
+<td>Necrotica</td>
+<td>1994</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Nedor Comics</td>
 <td>1936</td>
 <td>Publisher</td>
@@ -38590,6 +38709,13 @@
 </tr>
 
 <tr>
+<td>Piggs And Stubb</td>
+<td>1994</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pilgrim</td>
 <td>2010</td>
 <td>IDW</td>
@@ -40362,6 +40488,20 @@
 <td>2013</td>
 <td>Image</td>
 <td><a href="RatQueens/RatQueens.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ratsbane</td>
+<td>1993</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ravage</td>
+<td>1992</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45621,6 +45761,13 @@
 <td>1988</td>
 <td>Epic</td>
 <td><a href="StGeorge/StGeorge.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stain</td>
+<td>1998</td>
+<td>Fathom</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
