--- a/index.html
+++ b/index.html
@@ -42182,6 +42182,13 @@
 </tr>
 
 <tr>
+<td>Rubber Blanket</td>
+<td>1991</td>
+<td>Rubber Blanket Press</a>
+<td><a href="RubberBlanket/RubberBlanket.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rubber Necker</td>
 <td>2002</td>
 <td>Alternative Comics</a>
